--- a/WebApplication7/WebApplication7.csproj
+++ b/WebApplication7/WebApplication7.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.SpringCloud.Client" Version="2.0.0-preview.1" />
+    <PackageReference Include="Steeltoe.Common" Version="3.1.0-rc1" />
+  </ItemGroup>
+
 </Project>
